--- a/BlackJack/BlackJack.vcxproj
+++ b/BlackJack/BlackJack.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="Dealer.h" />
     <ClInclude Include="DebugDeck.h" />
     <ClInclude Include="Deck.h" />
+    <ClInclude Include="Flags.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Player.h" />
   </ItemGroup>
